--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@
   width: 50%;
   min-height: 20px;
   overflow: hidden;
-  margin: auto;
+  margin: 0 auto;
   margin-top: 30px;
   text-align: center;
 }
@@ -120,44 +120,25 @@
   border: none;
 }
 
+.step-content-com button{
+  background-color: #E2E1E1;
+}
+.step-content-com button:hover {
+  background-color: #8CC8DC;
+  color: #fff;
+  cursor: pointer;
+}
+.step-content-com p  {
+  font-size: 0.7em;
+}
+
 
 /*----------- CONTENT IN STEP 1 -------------*/
-#step1-content button{
-  background-color: #E2E1E1;
-}
-
-#step1-content button:hover {
-  background-color: #8CC8DC;
-  color: #fff;
-  cursor: pointer;
-}
 
 /*----------- CONTENT IN STEP 2 -------------*/
-#step2-content p  {
-  font-size: 0.7em;
-}
-
-#step2-content button{
-  background-color: #E2E1E1;
-}
-#step2-content button:hover {
-  background-color: #8CC8DC;
-  color: #fff;
-  cursor: pointer;
-}
 
 /*----------- CONTENT IN STEP 3 -------------*/
-#step3-content button{
-  background-color: #E2E1E1;
-}
-#step3-content button:hover {
-  background-color: #8CC8DC;
-  color: #fff;
-  cursor: pointer;
-}
-#step3-content p  {
-  font-size: 0.7em;
-}
+
 #step3-content select {
   width: 140px;
   height: 170px;
@@ -167,17 +148,7 @@
 #step4-content {
   width: 80%;
 }
-#step4-content button{
-  background-color: #E2E1E1;
-}
-#step4-content button:hover {
-  background-color: #8CC8DC;
-  color: #fff;
-  cursor: pointer;
-}
-#step4-content p  {
-  font-size: 0.7em;
-}
+
 #step4-content h3  {
   margin-bottom: 10px;
 }
@@ -196,21 +167,11 @@
 }
 
 /*----------- CONTENT IN STEP 5 -------------*/
-#step5-content button{
-  background-color: #E2E1E1;
-}
-#step5-content button:hover {
-  background-color: #8CC8DC;
-  color: #fff;
-  cursor: pointer;
-}
+
 step5-content {
   display: inline-block; 
 }
 
-#step5-content p  {
-  font-size: 0.7em;
-}
 #dateinput  {
   width: 100px;
   display: inline-block;
@@ -238,37 +199,16 @@ step5-content {
 }
 
 /*----------- CONTENT IN STEP 6 -------------*/
-#step6-content button{
-  background-color: #E2E1E1;
-}
-#step6-content button:hover {
-  background-color: #8CC8DC;
-  color: #fff;
-  cursor: pointer;
-}
+
 step6-content {
   display: inline-block; 
-}
-
-#step6-content p  {
-  font-size: 0.7em;
 }
 
 /*----------- CONTENT IN STEP 7 -------------*/
 #step7-content {
   width: 80%;
 }
-#step7-content button{
-  background-color: #E2E1E1;
-}
-#step7-content button:hover {
-  background-color: #8CC8DC;
-  color: #fff;
-  cursor: pointer;
-}
-#step7-content p  {
-  font-size: 0.7em;
-}
+
 #step7-content h5  {
   margin-bottom: 10px;
 }
@@ -287,21 +227,10 @@ step6-content {
 }
 
 /*----------- CONTENT IN STEP 8 -------------*/
-#step8-content button{
-  background-color: #E2E1E1;
-}
-#step8-content button:hover {
-  background-color: #8CC8DC;
-  color: #fff;
-  cursor: pointer;
-}
 step8-content {
   display: inline-block; 
 }
 
-#step8-content p  {
-  font-size: 0.7em;
-}
 
 /*-------- CREATE PROJET - STUDENT ---------*/
 
@@ -341,7 +270,7 @@ step8-content {
   font-size: 1em;
   color: #222;
   top: 28px;
-  width: 11%;
+  width: 10%;
   left: 0;
   background-color: #fff;
   border-radius: 4px;
@@ -363,41 +292,46 @@ step8-content {
 }
 
 #bcUL2s {
-  margin-left: 12.5%;
+  margin-left: 11%;
   z-index: 99;
   opacity: 0.4;
 }
 
 #bcUL3s {
-  margin-left: 25%;
+  margin-left: 22%;
   z-index: 98;
   opacity: 0.4;
 }
 
 #bcUL4s {
-  margin-left: 37.5%;
+  margin-left: 33%;
   z-index: 97;
   opacity: 0.4;
 }
 
 #bcUL5s {
-  margin-left: 50%;
+  margin-left: 44%;
   z-index: 97;
   opacity: 0.4;
 }
 
 #bcUL6s {
-  margin-left: 62.5%;
+  margin-left: 55%;
   z-index: 97;
   opacity: 0.4;
 }
 #bcUL7s {
-  margin-left: 75%;
+  margin-left: 66%;
   z-index: 97;
   opacity: 0.4;
 }
 #bcUL8s {
-  margin-left: 87.5%;
+  margin-left: 77%;
+  z-index: 97;
+  opacity: 0.4;
+}
+#bcUL9s {
+  margin-left: 88%;
   z-index: 97;
   opacity: 0.4;
 }
@@ -412,6 +346,8 @@ step8-content {
 }
 
 /*----------- END OF BREAD CRUMPS -----------*/
+
+/*----------- IN COMMON FOR STEPS -----------*/
 .step-content-stud  {
   position: relative;
   width: 50%;
@@ -425,96 +361,77 @@ step8-content {
   border: none;
 }
 
+.step-content-stud button{
+  background-color: #E2E1E1;
+}
+.step-content-stud button:hover {
+  background-color: #8CC8DC;
+  color: #fff;
+  cursor: pointer;
+}
+.step-content-stud p  {
+  font-size: 0.7em;
+}
 
 /*----------- CONTENT IN STEP 1 -------------*/
-#step1-content-stud button{
-  background-color: #E2E1E1;
-}
-
-#step1-content-stud button:hover {
-  background-color: #8CC8DC;
-  color: #fff;
-  cursor: pointer;
-}
-
-/*----------- CONTENT IN STEP 2 -------------*/
-#step2-content-stud p  {
-  font-size: 0.7em;
-}
-
-#step2-content-stud button{
-  background-color: #E2E1E1;
-}
-#step2-content-stud button:hover {
-  background-color: #8CC8DC;
-  color: #fff;
-  cursor: pointer;
-}
-
-/*----------- CONTENT IN STEP 3 -------------*/
-#step3-content-stud button{
-  background-color: #E2E1E1;
-}
-#step3-content-stud button:hover {
-  background-color: #8CC8DC;
-  color: #fff;
-  cursor: pointer;
-}
-#step3-content-stud p  {
-  font-size: 0.7em;
-}
-#step3-content-stud select {
-  margin-bottom: 100px;
-}
-
-/*----------- CONTENT IN STEP 4 -------------*/
-#step4-content-stud {
+#step1-content-stud {
   width: 80%;
 }
-#step4-content-stud button{
-  background-color: #E2E1E1;
-}
-#step4-content-stud button:hover {
-  background-color: #8CC8DC;
-  color: #fff;
-  cursor: pointer;
-}
-#step4-content-stud p  {
-  font-size: 0.7em;
-}
-#step4-content-stud h3  {
+#step1-content-stud h5  {
   margin-bottom: 10px;
 }
-.step4formBox-stud {
+.step1formBox-stud {
   width: 250px;
   margin: 50px;
 }
 
-#step4UL-stud li {
+#step1UL-stud li {
   display: inline-block; 
 }
-#step4UL-stud select {
+#step1UL-stud select {
+  width: 140px;
+  height: 75px;
+  text-align: center;
+}
+/*----------- CONTENT IN STEP 2 -------------*/
+
+
+/*----------- CONTENT IN STEP 3 -------------*/
+
+/*----------- CONTENT IN STEP 4 -------------*/
+
+#step4-content-stud select {
+  margin-bottom: 100px;
+}
+
+/*----------- CONTENT IN STEP 5 -------------*/
+#step5-content-stud {
+  width: 80%;
+}
+
+#step5-content-stud h3  {
+  margin-bottom: 10px;
+}
+.step5formBox-stud {
+  width: 250px;
+  margin: 50px;
+}
+
+#step5UL-stud li {
+  display: inline-block; 
+}
+#step5UL-stud select {
   width: 140px;
   height: 75px;
   text-align: center;
 }
 
-/*----------- CONTENT IN STEP 5 -------------*/
-#step5-content-stud button{
-  background-color: #E2E1E1;
-}
-#step5-content-stud button:hover {
-  background-color: #8CC8DC;
-  color: #fff;
-  cursor: pointer;
-}
-step5-content-stud {
+/*----------- CONTENT IN STEP 6 -------------*/
+
+step6-content-stud {
   display: inline-block; 
 }
 
-#step5-content-stud p  {
-  font-size: 0.7em;
-}
 #dateinput-stud  {
   width: 100px;
   display: inline-block;
@@ -541,68 +458,34 @@ step5-content-stud {
   *overflow:hidden;
 }
 
-/*----------- CONTENT IN STEP 6 -------------*/
-#step6-content-stud button{
-  background-color: #E2E1E1;
-}
-#step6-content-stud button:hover {
-  background-color: #8CC8DC;
-  color: #fff;
-  cursor: pointer;
-}
-step6-content-stud {
+/*----------- CONTENT IN STEP 7 -------------*/
+step7-content-stud {
   display: inline-block; 
 }
 
-#step6-content-stud p  {
-  font-size: 0.7em;
-}
-
-/*----------- CONTENT IN STEP 7 -------------*/
-#step7-content-stud {
+/*----------- CONTENT IN STEP 8 -------------*/
+#step8-content-stud {
   width: 80%;
 }
-#step7-content-stud button{
-  background-color: #E2E1E1;
-}
-#step7-content-stud button:hover {
-  background-color: #8CC8DC;
-  color: #fff;
-  cursor: pointer;
-}
-#step7-content-stud p  {
-  font-size: 0.7em;
-}
-#step7-content-stud h5  {
+#step8-content-stud h5  {
   margin-bottom: 10px;
 }
-.step7formBox-stud {
+.step8formBox-stud {
   width: 250px;
   margin: 50px;
 }
 
-#step7UL-stud li {
+#step8UL-stud li {
   display: inline-block; 
 }
-#step7UL-stud select {
+#step8UL-stud select {
   width: 140px;
   height: 75px;
   text-align: center;
 }
 
-/*----------- CONTENT IN STEP 8 -------------*/
-#step8-content-stud button{
-  background-color: #E2E1E1;
-}
-#step8-content-stud button:hover {
-  background-color: #8CC8DC;
-  color: #fff;
-  cursor: pointer;
-}
+/*----------- CONTENT IN STEP 9 -------------*/
 
-#step8-content-stud p  {
-  font-size: 0.7em;
-}
 
 /*----------- THANK YOU PAGE STARTS HERE -------------*/
 
