--- a/css/style.css
+++ b/css/style.css
@@ -582,15 +582,16 @@ label {
 #to-top {
   position: fixed;
   right: calc(17.5% - 62px); /* 17.5% = margin from content + this width */
-  bottom: 0;
+  bottom: -10px;
   z-index: 1000;
   padding: 15px;
+  padding-top: 7px;
   padding-bottom: 25px;
   background-color: #222;
   font-size: 2em;
-  color: #fff;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
+  color: #ccc;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
   cursor: pointer;
 }
 
@@ -670,6 +671,9 @@ label {
   border-radius: 4px;
   text-transform: uppercase;
   color: rgb(212, 62, 73);
+  box-shadow: 2px 2px 2px rgba(0,0,0,0.1);
+  -moz-box-shadow: 2px 2px 2px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 2px 2px 2px rgba(0,0,0,0.1);
 }
 
 .create-account-btn h5:hover {
@@ -677,6 +681,12 @@ label {
   background-color: rgba(212, 62, 73, 0.75);
 /*  border: 1px solid rgba(0,0,0,0);*/
   cursor: pointer;
+}
+
+.create-account-btn h5:active {
+  box-shadow: none;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
 }
 
 #intro-3btn {
@@ -1133,9 +1143,9 @@ svg {
 .bubble-float-bottom:hover, .bubble-float-bottom:focus, .bubble-float-bottom:active {
   -webkit-transform: translateY(5px) translateZ(0);
   transform: translateY(5px) translateZ(0);
-  box-shadow: 2px -2px 8px #dcdcdc;
-  -moz-box-shadow: 2px -2px 8px #dcdcdc;
-  -webkit-box-shadow: 2px -2px 8px #dcdcdc; 
+  box-shadow: 2px -2px 8px rgba(0,0,0,0.1);
+  -moz-box-shadow: 2px -2px 8px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 2px -2px 8px rgba(0,0,0,0.1); 
 }
 
 .bubble-float-bottom:hover:before, .bubble-float-bottom:focus:before, .bubble-float-bottom:active:before {
@@ -1173,9 +1183,9 @@ svg {
 .bubble-float-top:hover, .bubble-float-top:focus, .bubble-float-top:active {
   -webkit-transform: translateY(-5px) translateZ(0);
   transform: translateY(-5px) translateZ(0);
-  box-shadow: 2px 2px 8px #dcdcdc;
-  -moz-box-shadow: 2px 2px 8px #dcdcdc;
-  -webkit-box-shadow: 2px 2px 8px #dcdcdc; 
+  box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
+  -moz-box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 2px 2px 8px rgba(0,0,0,0.1); 
 }
 
 .bubble-float-top:hover:before, .bubble-float-top:focus:before, .bubble-float-top:active:before {
@@ -1290,9 +1300,9 @@ svg {
 
 /*
 .phi-active {
-  box-shadow: 2px -2px 8px #dcdcdc;
-  -moz-box-shadow: 2px -2px 8px #dcdcdc;
-  -webkit-box-shadow: 2px -2px 8px #dcdcdc; 
+  box-shadow: 2px -2px 8px rgba(0,0,0,0.1);
+  -moz-box-shadow: 2px -2px 8px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 2px -2px 8px rgba(0,0,0,0.1); 
   transform: translateY(5px) translateZ(0);
   -moz-transfomr: translateY(5px) translateZ(0);
   -webkit-transform: translateY(5px) translateZ(0);   
@@ -1311,9 +1321,9 @@ svg {
 */
 
 .phi-active-no_login {
-  box-shadow: 2px 2px 8px #dcdcdc;
-  -moz-box-shadow: 2px 2px 8px #dcdcdc;
-  -webkit-box-shadow: 2px 2px 8px #dcdcdc; 
+  box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
+  -moz-box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 2px 2px 8px rgba(0,0,0,0.1); 
   transform: translateY(-5px) translateZ(0);
   -moz-transfomr: translateY(-5px) translateZ(0);
   -webkit-transform: translateY(-5px) translateZ(0);   
@@ -1331,9 +1341,9 @@ svg {
 }
 
 .phi-active-after_login {
-    box-shadow: 2px -2px 8px #dcdcdc;
-  -moz-box-shadow: 2px -2px 8px #dcdcdc;
-  -webkit-box-shadow: 2px -2px 8px #dcdcdc; 
+    box-shadow: 2px -2px 8px rgba(0,0,0,0.1);
+  -moz-box-shadow: 2px -2px 8px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 2px -2px 8px rgba(0,0,0,0.1); 
   transform: translateY(5px) translateZ(0);
   -moz-transfomr: translateY(5px) translateZ(0);
   -webkit-transform: translateY(5px) translateZ(0); 
@@ -1374,9 +1384,9 @@ svg {
 
 .project:hover,
 .registered:hover {
-  box-shadow: 2px -2px 16px #dcdcdc;
-  -moz-box-shadow: 2px -2px 16px #dcdcdc;
-  -webkit-box-shadow: 2px -2px 16px #dcdcdc; 
+  box-shadow: 2px -2px 16px rgba(0,0,0,0.1);
+  -moz-box-shadow: 2px -2px 16px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 2px -2px 16px rgba(0,0,0,0.1); 
   transition-duration: 0.3s;
   -moz-transition-property: 0.3s;
   -webkit-transition-duration: 0.3s;
@@ -1753,7 +1763,85 @@ svg {
   left: 37.5%; /* Fix while we only have 2 to choose from */
 }
 
-/*----------------- Modal -------------------*/
+/*----------------- Tags-wrap ---------------------*/
+/*--------------- Overview-tags-wrap --------------*/
+
+.tag_overview {
+  position: fixed;
+  background-color: #222;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  width: 400px;
+  height: 430px;
+  left: calc(50% - 200px); /* same as "to-top"-button */
+  bottom: -375px;
+  z-index: 980;
+  box-shadow: 0px -4px 32px rgba(0,0,0,0.1);
+  -moz-box-shadow: 0px -4px 32px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0px -4px 32px rgba(0,0,0,0.1); 
+  overflow: hidden;
+}
+
+.overview-tags-wrap {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  left: 15px;
+}
+
+.tag_overview h4 {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  top: 20px;
+  color: #ccc;
+  font-size: 1em;
+}
+
+#tag_overview-up_btn {
+  position: absolute;
+  top: 23px;
+  left: 70%;
+  font-size: 0.7em;
+  color: #ccc;
+}
+
+.tag_overview p {
+  position: absolute;
+  color: #ccc;
+  font-size: 0.8em;
+  width: 100%;
+  text-align: center;
+  right: 0;
+  top: 200px;
+}
+
+#overview-tagwheel {
+  position: absolute;
+  width: 130px;
+  height: 200px;
+  right: calc(50% - 65px); /* 50% minus half width */
+  top: 60px;
+}
+
+/*
+#close-tagoverview {
+  visibility: hidden;
+  position: absolute;
+  color: #ccc;
+  top: 20px;
+  right: 25px;
+  cursor: pointer;
+}
+*/
+
+/*------------- Overview-tags-wrap end --------------*/
+/*----------------- Tags-wrap end -------------------*/
+/*--------------------- Modal -------------------*/
+
+.modal {
+  z-index: 2000;
+}
 
 .modal-signup {
   position: relative;
@@ -1863,10 +1951,8 @@ svg {
 }
 
 .all_inputs-select_tags {
-  position: relative;
-  margin-top: 10px;
-  /* Hack to set height from content */
-  min-height: 5px;
+  position: absolute;
+  top: 70px;
 }
 
 .modal button[type="submit"] {
@@ -1992,9 +2078,9 @@ svg {
 .smallBox:hover,
 #allSmallBoxLeft:hover,
 #smallBoxLeft5:hover {
-  box-shadow: 2px -2px 8px #dcdcdc;
-  -moz-box-shadow: 2px -2px 8px #dcdcdc;
-  -webkit-box-shadow: 2px -2px 8px #dcdcdc; 
+  box-shadow: 2px -2px 8px rgba(0,0,0,0.1);
+  -moz-box-shadow: 2px -2px 8px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 2px -2px 8px rgba(0,0,0,0.1); 
   transition-duration: 0.3s;
   -moz-transition-duration: 0.3s;
   -webkit-transition-duration: 0.3s;
@@ -2260,3 +2346,532 @@ input:focus ~ .highlight {
 /* FORM INPUT CLICK ANIMATIONS CSS SLUT */
 
 /*------ Page: my_page.html (opr. Simon) END -------*/
+
+/*-------- CREATE PROJET - COMPANY ---------*/
+
+#wrapper_cpc {
+  height: 700px;
+}
+
+#cpWrapper {
+  position: relative;
+  width: 90%;
+  margin: 30px auto;
+}
+
+#bcHead {
+  width: 100%;
+  font-weight: 100;
+  font-size: 3.5em;
+  letter-spacing: 0.1em;
+  color: #ccc;
+  text-align: center;
+  padding: 20px 0 20px 0;
+}
+
+.bcUL_line {
+  position: absolute;
+  width: 90%;
+  height: 1px;
+  top: 41px;
+  left: 5%;
+  background-color: #fff;
+}
+
+.bc p {
+  padding: 5px 0 5px 0;
+  display: block;
+}
+
+#bcBoxc {
+  position: relative;
+  width: 90%;
+  height: 72px;
+  margin: 0 auto;
+}
+
+#bcULc { 
+  position: absolute;
+  width: 100%;
+}
+
+.bc {
+  position: absolute;
+  display: inline-block;
+  text-align: center;
+  font-size: 0.8em;
+  top: 28px;
+  left: 0;
+  background-color: #fff;
+  border-radius: 4px;
+}
+
+.bc p {
+  color: #ccc;
+}
+
+#bcULc ul li {
+  width: 13%;
+}
+
+#bcUL1c {
+  margin-left: 0%;
+  z-index: 100;
+}
+
+#bcUL2c {
+  margin-left: 14.2857%;
+  z-index: 99;
+}
+
+#bcUL3c {
+  margin-left: 28.5714%;
+  z-index: 98;
+}
+
+#bcUL4c {
+  margin-left: 42.8571%;
+  z-index: 97;
+}
+
+#bcUL5c {
+  margin-left: 57.1428%;
+  z-index: 97;
+}
+
+#bcUL6c {
+  margin-left: 71.4285%;
+  z-index: 97;
+}
+#bcUL7c {
+  margin-left: 85.7142%;
+  z-index: 97;
+}
+
+/*----------- END OF BREAD CRUMPS -----------*/
+
+.step-content-com,
+.step-content-stud {
+  box-sizing: border-box;
+  position: absolute;
+  width: 80%;
+/*  right: -100%; */
+  min-height: 20px;
+  overflow: hidden;
+  margin-left: 10%;
+  margin-top: 30px;
+  text-align: center;
+  padding: 30px;
+  border: 1px solid #fff;
+  border-radius: 8px;
+}
+
+.step-content-com p,
+.step-content-stud p {
+  padding: 5px;
+  font-size: 0.7em;
+}
+
+.step-content-com h4,
+.step-content-stud h4 {
+  padding: 0 30px 30px 30px;
+}
+
+.step-content-stud input,
+.step-content-com input, 
+button {
+  border: none;
+}
+
+.step-content-com input:focus,
+.step-content-stud input:focus {
+  box-shadow: 0px 0px 8px rgba(140, 200, 220, 0.3)
+}
+
+.step-content-com button,
+.step-content-stud button {
+  background-color: #E2E1E1;
+  box-sizing: border-box;
+  margin-top: 40px;
+}
+
+#next_step_3 {
+  position: relative;
+  background-color: #e2e1e1;
+  width: 312px;
+  border: none;
+  margin: 40px auto;
+  padding: 5px;
+  border-radius: 4px;
+  width: 200px;
+  font-size: 1.1em;
+  text-transform: uppercase;
+}
+
+#next_step_3:hover,
+.step-content-com button:hover,
+.step-content-stud button:hover {
+  background-color: rgb(140, 200, 220);
+  color: #fff;
+  cursor: pointer;
+}
+
+
+/*----------- CONTENT IN STEP 1 -------------*/
+
+/*----------- CONTENT IN STEP 2 -------------*/
+
+/*----------- CONTENT IN STEP 3 -------------*/
+
+#step3-content select {
+  width: 140px;
+  height: 170px;
+  text-align: center;
+}
+/*----------- CONTENT IN STEP 4 -------------*/
+
+#step4-content h3  {
+  margin-bottom: 10px;
+}
+
+.step4formBox {
+  width: 250px;
+  margin: 50px;
+}
+
+#step4UL li {
+  display: inline-block; 
+}
+#step4UL select {
+  width: 140px;
+  height: 75px;
+  text-align: center;
+}
+
+/*----------- CONTENT IN STEP 5 -------------*/
+
+step5-content {
+  display: inline-block; 
+}
+
+#dateinput  {
+  width: 100px;
+  display: inline-block;
+}
+
+#checkboxdiv  {
+  margin-top: 8px;
+  margin-bottom: 10px;
+}
+#checkboxdiv label  {
+  display: block;
+  padding-left: 15px;
+  text-indent: -15px;
+}
+#checkboxdiv input  {
+  display: inline-block;
+  width: 13px;
+  height: 13px;
+  padding: 0;
+  margin: 0;
+  vertical-align: middle;
+  position: relative;
+  top: -1px;
+  *overflow:hidden;
+}
+
+/*----------- CONTENT IN STEP 6 -------------*/
+
+step6-content {
+  display: inline-block; 
+}
+
+/*----------- CONTENT IN STEP 7 -------------*/
+
+#step7-content h5  {
+  margin-bottom: 10px;
+}
+.step7formBox {
+  width: 250px;
+  margin: 50px;
+}
+
+#step7UL li {
+  display: inline-block; 
+}
+#step7UL select {
+  width: 140px;
+  height: 75px;
+  text-align: center;
+}
+
+/*----------- CONTENT IN STEP 8 -------------*/
+step8-content {
+  display: inline-block; 
+}
+
+
+/*-------- CREATE PROJET - STUDENT ---------*/
+
+#wrapper_cps {
+  height: 700px;
+}
+
+#cpWrapper {
+  position: relative;
+  width: 90%;
+  margin: 30px auto;  
+}
+#bcHeadBox  {
+  width: 30%;
+  height: 55px;
+  border-bottom: solid #ccc;
+  margin: 0 auto;
+}
+
+#bcHead {
+  text-align: center;
+  padding: 20px;
+}
+
+#bcBoxs {
+  position: relative;
+  width: 90%;
+  height: 72px;
+  margin: 0 auto;
+}
+
+#bcULs { 
+  position: absolute;
+  width: 100%;
+}
+
+#bcULs ul li {
+  width: 10%;
+}
+
+#bcUL1s {
+  margin-left: 0%;
+  z-index: 100;
+}
+
+#bcUL2s {
+  margin-left: 11%;
+  z-index: 99;
+}
+
+#bcUL3s {
+  margin-left: 22%;
+  z-index: 98;
+}
+
+#bcUL4s {
+  margin-left: 33%;
+  z-index: 97;
+}
+
+#bcUL5s {
+  margin-left: 44%;
+  z-index: 97;
+}
+
+#bcUL6s {
+  margin-left: 55%;
+  z-index: 97;
+}
+#bcUL7s {
+  margin-left: 66%;
+  z-index: 97;
+}
+#bcUL8s {
+  margin-left: 77%;
+  z-index: 97;
+}
+#bcUL9s {
+  margin-left: 88%;
+  z-index: 97;
+}
+
+.bc-past_step {
+  background-color: rgb(140, 200, 220);
+}
+
+.bc-past_step p {
+  color: #fff;
+}
+
+.bc-active {
+  color: #fff;
+  background-color: rgb(140, 200, 220);
+  transform: scale(1.2,1.2);
+  -moz-transform: scale(1.2,1.2);
+  -webkit-transform: scale(1.2,1.2);
+  box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
+  -moz-box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 2px 2px 8px rgba(0,0,0,0.1);  
+}
+
+.bc-active p {
+  color: #fff;
+}
+
+/*----------- END OF BREAD CRUMPS -----------*/
+
+/*----------- CONTENT IN STEP 1 -------------*/
+#step1-content-stud {
+  width: 80%;
+}
+#step1-content-stud h5  {
+  margin-bottom: 10px;
+}
+.step1formBox-stud {
+  width: 250px;
+  margin: 50px;
+}
+
+#step1UL-stud li {
+  display: inline-block; 
+}
+#step1UL-stud select {
+  width: 140px;
+  height: 75px;
+  text-align: center;
+}
+/*----------- CONTENT IN STEP 2 -------------*/
+
+
+/*----------- CONTENT IN STEP 3 -------------*/
+
+/*----------- CONTENT IN STEP 4 -------------*/
+
+#step4-content-stud select {
+  margin-bottom: 100px;
+}
+
+/*----------- CONTENT IN STEP 5 -------------*/
+#step5-content-stud {
+  width: 80%;
+}
+
+#step5-content-stud h3  {
+  margin-bottom: 10px;
+}
+.step5formBox-stud {
+  width: 250px;
+  margin: 50px;
+}
+
+#step5UL-stud li {
+  display: inline-block; 
+}
+#step5UL-stud select {
+  width: 140px;
+  height: 75px;
+  text-align: center;
+}
+
+/*----------- CONTENT IN STEP 6 -------------*/
+
+step6-content-stud {
+  display: inline-block; 
+}
+
+#dateinput-stud  {
+  width: 100px;
+  display: inline-block;
+}
+
+#checkboxdiv  {
+  margin-top: 8px;
+  margin-bottom: 10px;
+}
+#checkboxdiv-stud label  {
+  display: block;
+  padding-left: 15px;
+  text-indent: -15px;
+}
+#checkboxdiv-stud input  {
+  display: inline-block;
+  width: 13px;
+  height: 13px;
+  padding: 0;
+  margin: 0;
+  vertical-align: middle;
+  position: relative;
+  top: -1px;
+  *overflow:hidden;
+}
+
+/*----------- CONTENT IN STEP 7 -------------*/
+step7-content-stud {
+  display: inline-block; 
+}
+
+/*----------- CONTENT IN STEP 8 -------------*/
+#step8-content-stud {
+  width: 80%;
+}
+#step8-content-stud h5  {
+  margin-bottom: 10px;
+}
+.step8formBox-stud {
+  width: 250px;
+  margin: 50px;
+}
+
+#step8UL-stud li {
+  display: inline-block; 
+}
+#step8UL-stud select {
+  width: 140px;
+  height: 75px;
+  text-align: center;
+}
+
+/*----------- CONTENT IN STEP 9 -------------*/
+
+
+/*----------- THANK YOU PAGE STARTS HERE -------------*/
+
+.isa_success {
+  margin: 10px 0px;
+  padding:12px;
+}
+
+.isa_success {
+  position: relative;
+  color: #4F8A10;
+  background-color: #DFF2BF;
+  border-radius: 2px;  
+  width: 100%;
+  margin: 45px auto;
+}
+
+.isa_success i {
+  margin: 10px 22px;
+  font-size:4em;
+  vertical-align:middle;
+}
+
+#content-wrap {
+  position: relative;
+  margin: 0 auto;
+  width: 500px;
+}
+
+#gif-box  {
+/*  position: relative;*/
+  width: 420px;
+  margin: 0 auto;
+}
+
+#button-yourpage {
+  position: relative;
+  margin: 25px auto;
+  box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
+}
+#button-yourpage:hover {
+  background-color: #8CC8DC;
+  color: #fff;
+  cursor: pointer;
+}
